2006-07-27  Gary Coady <gary@lyranthe.org>

	Fixes #333576

	* gnome-keybinding-properties.c (accel_edited_callback): don't assume
	defines are contiguous.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* keybinding.desktop.in.in: don't list the Application category, 
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-04-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c: remove brightness keybindings, as
	they duplicate with gnome-power-manager's (greater) functionality
	(Closes: #339857)

2006-01-30  Rodrigo Moya <rodrigo@novell.com>

	* actions/acme.h:
	* gnome-keybinding-properties.c: reverted commit from 2006-01-11.

2006-01-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c: (accel_edited_callback):
	Refuse to bind letter keys without a modifier (Closes: #86956)

2006-01-11  Sebastien Bacher  <seb128@debian.org>

	* gnome-keybinding-properties.c:
	drop the keysym/keycode binding code, it's an hack and 
	doesn't work fine, patch by Bastien Nocera <hadess@hadess.net>
	(Closes: #133815)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* eggcellrendererkeys.c: (egg_cell_renderer_keys_set_accelerator):
	Remove some unused code.
	* gnome-keybinding-properties.c: (should_show_key): Mark some
	arrays static.

2005-02-08  Sebastien Bacher  <seb128@debian.org>

	* eggcellrendererkeys.c: (egg_cell_renderer_keys_start_editing):
	patch by Kjartan Maraas <kmaraas@gnome.org>, some code cleanups
        (Closes: #166267).

2005-01-13  Sebastien Bacher  <seb128@debian.org>

	* gnome-keybinding-properties.c: (start_editing_kb_cb),
	(setup_dialog): edit the keybinding when "enter" is pressed 
	(Closes: #127992).

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-keybinding-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).
